syntax = "proto3";
package enginepb;

option go_package = "github.com/pingcap/tiflow/engine/enginepb";

message Record {
    enum RecordType {
        Data = 0;
        DDL = 1;
    }
    RecordType tp = 1;
    int32 schema_ver = 2;
    int32 tid = 3;
    int32 gtid = 4;
    int32 pk = 5;
    // for record time
    repeated int64 time_tracer = 6;
}

message TestBinlogRequest {
    int32 gtid = 1;
}

service TestService {
    rpc FeedBinlog(TestBinlogRequest) returns(stream Record);
}
